Fixed alignment of weather icon and conversions

--- a/src/weather.css
+++ b/src/weather.css
@@ -8,19 +8,19 @@ h1 {
   padding-top: 10px;
 }
 a#celsius-templink {
-  float: right;
-  padding: 10px 10px 10px 0;
   text-decoration: none;
   color: black;
   font-size: 20px;
+  position: relative;
+  top: -20px;
 }
 
 a#fahren-templink {
-  float: right;
-  padding: 10px 10px 10px 0;
   text-decoration: none;
   color: black;
   font-size: 20px;
+  position: relative;
+  top: -20px;
 }
 
 h2 {
